--- a/style.css
+++ b/style.css
@@ -185,8 +185,14 @@ section {
 
 .project {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
     align-items:center;
+    width: 100%;
+}
+
+.project > img {
+    height: 170px;
 }
 
 footer {
@@ -281,6 +287,9 @@ ul {
     .aside-article  {
         margin: 8%;
     }
+    .project > a > img {
+        height: 170px;
+    }
 } 
 
 @media (max-width: 900px) {
@@ -315,8 +324,8 @@ ul {
         height: 208px;
         left: 60px;
     }
-    .project-img {
-        height: 170px;
+    .project > a > img {
+        height: 120px;
     }
 }
 
