--- a/style.css
+++ b/style.css
@@ -192,13 +192,14 @@ section {
     flex-wrap: wrap;    
     flex-direction: row;
     row-gap: 15px;
-    column-gap: 40px;
+    column-gap: 20px;
     justify-content: center;
     align-items:center;
     width: 100%;
 }
 
 .project > img {
+    max-width: 300px;
     height: 170px;
 }
 
